# LiteDefender

./: CMakeLists.txt  README.md  main.cpp
include/: logger.hpp  monitor.hpp  scanner.hpp  utils.hpp
signatures/: malware_signatures.txt
src/: logger.cpp  monitor.cpp  scanner.cpp  utils.cpp
tests/: test_scanner.cpp
